# Tarottrpg

./: CMakeLists.txt  CMakePresets.json  README.md
src/: main.cpp
src/game/CardDefinition/: CardDefinition.cpp  CardDefinition.hpp
src/game/CardInstance/: CardInstance.cpp  CardInstance.hpp
src/game/Deck/: Deck.cpp  Deck.hpp
src/game/GameState/: GameState.cpp  GameState.hpp
src/game/PlayerState/: PlayerState.cpp  PlayerState.hpp
